Se configuró package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "Test automatizados para el curso de PILQA",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    
+    "test": "test",
+    "cypress:open:desktop": "npx cypress open --e2e --browser chrome -e type=desktop",
+    "cypress:open:mobile": "npx cypress open --e2e --browser chrome -e type=mobile",
+    "cypress:open:firefox:desktop": "npx cypress open --e2e --browser firefox -e type=desktop,grepTags=@regression",
+    "cypress:open:firefox:mobile": "npx cypress open --e2e --browser firefox -e type=mobile",
+    "cypres:run:eden": "npx cypress run --e2e --browser chrome --spec cypress/e2e/EDEN",
+    "cypres:run:eden:firefox": "npx cypress run --e2e --browser firefox --spec cypress/e2e/EDEN"
   },
+
   "keywords": [
     "Tests",
     "Cypress",
