Se corrigieron issues y se agregaron test de Servicios para EDEN y TiendaClaro

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Test automatizados para el curso de PILQA",
   "main": "index.js",
   "scripts": {
-    
     "test": "test",
     "cypress:open:desktop": "npx cypress open --e2e --browser chrome -e type=desktop",
     "cypress:open:mobile": "npx cypress open --e2e --browser chrome -e type=mobile",
@@ -13,7 +12,6 @@
     "cypres:run:eden": "npx cypress run --e2e --browser chrome --spec cypress/e2e/EDEN",
     "cypres:run:eden:firefox": "npx cypress run --e2e --browser firefox --spec cypress/e2e/EDEN"
   },
-
   "keywords": [
     "Tests",
     "Cypress",
@@ -25,5 +23,8 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^12.17.3"
+  },
+  "devDependencies": {
+    "@bahmutov/cy-grep": "^1.9.16"
   }
 }
