--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Darwoft",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.12.0",
     "cypress": "^12.17.3"
   },
   "devDependencies": {
