--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "author": "Darwoft",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^8.12.0",
-    "cypress": "^12.17.3"
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
-    "@bahmutov/cy-grep": "^1.9.16"
+    "@bahmutov/cy-grep": "^1.9.16",
+    "cypress": "^13.3.0"
   }
 }
