--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
+    "delete:reports": "del /f /s /q \"cypress/reports\" 1>nul",
     "cypress:open:desktop": "npx cypress open --e2e --browser chrome -e type=desktop",
     "cypress:open:mobile": "npx cypress open --e2e --browser chrome -e type=mobile",
     "cypress:open:firefox:desktop": "npx cypress open --e2e --browser firefox -e type=desktop,grepTags=@regression",
@@ -23,7 +24,8 @@
   "author": "Darwoft",
   "license": "ISC",
   "dependencies": {
-    "ajv": "^8.12.0"
+    "ajv": "^8.12.0",
+    "cypress-mochawesome-reporter": "^3.6.1"
   },
   "devDependencies": {
     "@bahmutov/cy-grep": "^1.9.17",
