--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "cypress-image-diff-js": "^1.31.0",
     "cypress-mochawesome-reporter": "^3.6.1"
   },
   "devDependencies": {
