Se agregó script de Yvytu(en Chrome), también se ajusto el ubral de diferencia en VisualTest de Yvytu usando Snapshoot

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cypress:open:firefox:mobile": "npx cypress open --e2e --browser firefox -e type=mobile",
     "cypres:run:eden": "npx cypress run --e2e --browser chrome --spec cypress/e2e/EDEN",
     "cypres:run:eden1": "npm run delete:reports &&  npx cypress run --e2e --browser chrome --spec cypress/e2e/EDEN/eden.cy.js",
-    "cypres:run:eden:firefox": "npx cypress run --e2e --browser firefox --spec cypress/e2e/EDEN"
+    "cypres:run:eden:firefox": "npx cypress run --e2e --browser firefox --spec cypress/e2e/EDEN",
+    "cypres:run:yvytu": "npm run delete:reports &&  npx cypress run --e2e --browser chrome --spec cypress/e2e/Yvytu/yvytuHome.cy.js"
   },
   "keywords": [
     "Tests",
